Data analysis / convert bbox to WGS84